--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,6 @@
     "angular-route": "~1.3.15",
     "angular-animate": "~1.3.15",
     "angular-spinkit": "~0.3.3",
+    "angular-oauth2": "~2.1.0"
   }
 }
